# db-query-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: eval_questions.json  seed.sql
src/: agent.py  database.py  eval.py  observability.py  schema_retriever.py  seed.py  sql_generator.py  validator.py
tests/: test_agent.py  test_database.py  test_observability.py  test_validator.py
