[project]
name = "db-query-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "voyageai>=0.3.0",
    "chromadb>=0.5.0",
    "sqlglot>=25.0.0",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
